--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>My_Name Homepage</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-</head>
-<body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+h1 {
+    color: blue;
+    font-size: 200%
+}
 
-		<p>Go crazy and customize me.</p>
+p {
+    font-family: "times new roman";
+    text-indent: 20px;
+    margin-left: 10px;
+}
 
-		<p>Le poguers webpage.</p>
-	</main>
-
-
-</body>
-</html>
+#content {
+    background-color: #cccccc;
+    width: 500px;
+    min-height: 300px;
+    padding: 10px;
+    margin: 10px;
+    border: solid 1px #444444;
+    font-size: 20px;
+}
