--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-h1 {
-    color: blue;
-    font-size: 200%
-}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Lab 2 - HTML Assignment</title>
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
+</head>
+<body>
+	<div id="content">
+		<h1>Hello world</h1>
 
-p {
-    font-family: "times new roman";
-    text-indent: 20px;
-    margin-left: 10px;
-}
-
-#content {
-    background-color: #cccccc;
-    width: 500px;
-    min-height: 300px;
-    padding: 10px;
-    margin: 10px;
-    border: solid 1px #444444;
-    font-size: 20px;
-}
+		<p>My partner and I contacted through Slack and then met up through Discord.
+			There we started up Atom and installed Teletype. From there, we worked on
+			the project in real time.</p>
+	</div>
+</body>
+</html>
