--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 2 - HTML Assignment</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<title>Wan's Homepage</title>
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
-	<div id="content">
-		<h1>Hello world</h1>
+	<div id="intro">
+		<h1>Introduction</h1>
 
-		<p>My partner and I contacted through Slack and then met up through Discord.
-			There we started up Atom and installed Teletype. From there, we worked on
-			the project in real time.</p>
+		<p>Hello my name is Wan Lee Tan. My interests are programming, making music,
+			creating game assets and drawing anime. I like to work on games with my
+			friends and I'm very interested in shader programming. I mostly produce
+			trap and breakcore. I like to do sound design and create 3d models,
+			textures, sprites and animations. I also like to draw anime stuff and
+			some horror as well.</p>
+
+		<img id="my-portrait" src="img/my_photo.png" />
+
+		<div id="labs">
+			<h1>Labs 2 to 6</h1>
+
+			<ul>
+				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
+
+				<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
+
+				<li><a href="lab4/index.html">Lab 4 File Structures</a></li>
+
+				<li><a href="lab5/index.html">Lab 5 File Structures</a></li>
+
+				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
+			</ul>
+		</div>
 	</div>
 </body>
 </html>
