--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structures</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<div id="content">
+		<h1>Lab 3 File Structures</h1>
+		<p>The idea of the lab is to make sure our understanding of local files on
+			the computers are correct.</p>
+		<h1>Challenges</h1>
+		<p>We had little difficulties like getting the image file to load and making
+			the background color in the CSS file otherwise it was pretty simple.</p>
+		<h1>Results</h1>
+		<p>Here you can see the thing working:</p>
+		<img id="results" src="img/res_screen.png" width="650"/>
+		<h1>More Screenshots</h1>
+		<p>Here is my file structure all lowercase:</p>
+		<img id="screen1" src="img/screen1.png" width="650"/>
+		<p>Here is the html of task 2:</p>
+		<img id="screen2" src="img/screen2.png" width="650"/>
+		<p>Here is the task 2 html in browser:</p>
+		<img id="screen3" src="img/screen3.png" width="650"/>
+		<p>Here is the html of task 3:</p>
+		<img id="screen4" src="img/screen4.png" width="650"/>
+		<p>Here is the task 3 html in browser:</p>
+		<img id="screen5" src="img/screen5.png" width="650"/>
+	</div>
 </body>
 </html>
