--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<div id = "content">
+		<img src = "img/taurus.jpg" width="650"/>
+		<h1>Lab 5: Data Types and Variables</h1>
+		<p>Working with your partner, experiment with basic
+			JavaScript data types and variables.</p>
+		<h1>Results</h1>
+		<p>My adblocker was blocking Google stuff and was spamming
+			the console so I just did it in the Opera homepage.</p>
+		<h1>Results</h1>
+		<p>Here is the program executing:</p>
+		<div class=output>
+			<h1>Script Output</h1>
+      <script type="text/javascript" src="js/lab.js"></script>
+		</div>
+	</div>
 </body>
 </html>
