--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<div id = "content">
+		<img src = "img/taurus.jpg" width="650"/>
+		<h1>Lab 6: Arrays and Objects</h1>
+		<p>Working with your partner, experiment with JavaScript arrays and objects.</p>
+		<h1>Challenges</h1>
+		<p>We got stuck at task 1 for a while because we didn't know how to reference
+			the elements. But it turned out that it was just in the example to the right
+			of the sentence. Figuring out how to declare an array and object was also a
+			small problem but it was easily solved by searching it up.</p>
+		<h1>Results</h1>
+		<p>Here is the program executing:</p>
+		<div class=output>
+			<h1>Script Output</h1>
+      <script type="text/javascript" src="js/lab.js"></script>
+		</div>
+	</div>
 </body>
 </html>
