--- a/lab5/index.html
+++ b/lab5/index.html
@@ -11,7 +11,7 @@
 		<h1>Lab 5: Data Types and Variables</h1>
 		<p>Working with your partner, experiment with basic
 			JavaScript data types and variables.</p>
-		<h1>Results</h1>
+		<h1>Challenges</h1>
 		<p>My adblocker was blocking Google stuff and was spamming
 			the console so I just did it in the Opera homepage.</p>
 		<h1>Results</h1>
