--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img id="my-portrait" src="img/my_photo.png" />
 
 		<div id="labs">
-			<h1>Labs 2 to 6</h1>
+			<h1>Labs 2 to 7</h1>
 
 			<ul>
 				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
@@ -30,6 +30,8 @@
 				<li><a href="lab5/index.html">Lab 5 File Structures</a></li>
 
 				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
+
+				<li><a href="lab7/index.html">Lab 7 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
