--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 				<li><a href="lab6/index.html">Lab 6 File Structures</a></li>
 
 				<li><a href="lab7/index.html">Lab 7 File Structures</a></li>
+
+				<li><a href="lab8/index.html">Lab 8 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
