--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 				<li><a href="lab7/index.html">Lab 7 File Structures</a></li>
 
 				<li><a href="lab8/index.html">Lab 8 File Structures</a></li>
+
+				<li><a href="lab9/index.html">Lab 9 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
