--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img id="my-portrait" src="img/my_photo.png" />
 
 		<div id="labs">
-			<h1>Labs 2 to 7</h1>
+			<h1>Labs 2 to 10</h1>
 
 			<ul>
 				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
@@ -36,6 +36,8 @@
 				<li><a href="lab8/index.html">Lab 8 File Structures</a></li>
 
 				<li><a href="lab9/index.html">Lab 9 File Structures</a></li>
+
+				<li><a href="lab10/index.html">Lab 10 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
