--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 				<li><a href="lab9/index.html">Lab 9 File Structures</a></li>
 
 				<li><a href="lab10/index.html">Lab 10 File Structures</a></li>
+
+				<li><a href="lab11/index.html">Lab 11 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
