--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img id="my-portrait" src="img/my_photo.png" />
 
 		<div id="labs">
-			<h1>Labs 2 to 15</h1>
+			<h1>Labs 2 to 16</h1>
 
 			<ul>
 				<li><a href="lab2/index.html">Lab 2 File Structures</a></li>
@@ -48,6 +48,8 @@
 				<li><a href="lab14/index.html">Lab 14 File Structures</a></li>
 
 				<li><a href="lab15/index.html">Lab 15 File Structures</a></li>
+
+				<li><a href="lab16/index.html">Lab 16 File Structures</a></li>
 			</ul>
 		</div>
 	</div>
